--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -23,3 +23,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # CONFIG_ZMK_STUDIO=y
 # Disable studio locking
 # CONFIG_ZMK_STUDIO_LOCKING=n
+
+# Enable mouse emulation supportAdd commentMore actions
+CONFIG_ZMK_POINTING=y
